2011-04-04  Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-28
	* Import All paths menu.
	* Remove configuration feature (command line). Bug#79748.

2011-04-04  Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-27
	* More work in progress on py import: jython jar

2011-04-03  Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-26
	* Work in progress on py import

2011-04-02  Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-25
	* Make Diff report more concise

2011-04-02  Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-24
	* Migrate/Diff no longer ignore/forget Reference status NEGATE/IGNORE/DEFAULT
	
2011-03-31  Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-23
	* improved labellig of radio buttons in "search" popup
	* fix bug in subtable creation and path removal/renaming
	* possibility to save a config as a new version in an existing dir/configName area

2011-03-30	Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-22
	* import configuration fix regarding to bug76148 (Raul)

2011-03-29  Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-21
	* extend module searches to include matches in parameter names/types and values

2011-03-28  Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-20
	* improved tracking/displaying unresolved InputTags
	* various little bug fixes

2011-03-23  Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	*   Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-18
	* add possibility to edit SMART column

2011-03-22  Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-17
	* add possibility to re-order prescale columns

2011-03-21  Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-16
	* modify, save & corrupt problems fixed (Vasu)
	* folders creation bug fixed - bug#77084 (Raul)

2011-03-16  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-05-15